test-results/stringify.err
[31m./examples/stringify.cup:5:21: error: [0] Macro @stringify failed: @stringify expected 1 arguments, but found 4[0m
    const char *s = @stringify(Hello, World, from, UPP);
                    [31m^[0m
